Bug 418390 - Occassional crash when trying to plot infinite values
Summary: Occassional crash when trying to plot infinite values
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: 2.7.0
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-02 08:24 UTC by subtorque
Modified: 2020-03-03 21:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description subtorque 2020-03-02 08:24:10 UTC
SUMMARY
Occassionally, Labplot may crash if I try to plot a graph containing one or more infinite values on the Y axis. Normally the plot area just turns blank when such y-data is selected.

STEPS TO REPRODUCE
1. Add new Octave CAS worksheet -> x=[0:0.001:1]; y=x.^(-1); y2=x; -> Evaluate worksheet
2. Add new worksheet -> Add new xy-plot -> Add new xy-curve
3. Select x as x-data and y as y-data. Alternate between y and y2 multiple times.

OBSERVED RESULT
Eventually, Labplot may crash when y -data containing infinite values is selected.

EXPECTED RESULT
No crash. Ignore or skip over infinite values in data while plotting, or warn the user about infinite values?

SOFTWARE/OS VERSIONS
Linux: openSUSE Tumbleweed 20200228
KDE Plasma Version: 5.18.1
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
-
Comment 1 Alexander Semke 2020-03-03 08:04:14 UTC
With the current code in master we don't crash but we fail to plot y=x^-1. We'll check. Thanks for reporting this.
Comment 2 Alexander Semke 2020-03-03 21:54:01 UTC
Git commit 15050431dc9ef76c50ea2d677d39e35c9956af09 by Alexander Semke.
Committed on 03/03/2020 at 21:53.
Pushed by asemke into branch 'master'.

[worksheet] ignore infinite values (created in CAS worksheets for
example) in curves.
FIXED-IN: 2.8

M  +1    -1    src/backend/core/AbstractColumn.cpp

https://invent.kde.org/kde/labplot/commit/15050431dc9ef76c50ea2d677d39e35c9956af09