[worksheet] ignore infinite values (created in CAS worksheets for example) in curves.

BUG: 418390
FIXED-IN: 2.8